kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-react-calculator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-react-calculator
  template:
    metadata:
      labels:
        app: spring-react-calculator
    spec:
      containers:
        - name: spring-react-calculator
          image: ghcr.io/roar-skinderviken/spring-react-calculator:v1
          ports:
            - containerPort: 8080
