kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-react-calculator-svc
spec:
  type: ClusterIP
  selector:
    app: spring-react-calculator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
